<resources>
    <string name="app_name">Corn Disease Detection</string>
    <string name="titulo_info_app">¿Qué es Corn Disease Detection?</string>
    <string name="descripcion_info_app">Es una aplicación inteligente basada en Aprendizaje Profundo que propone ayudar en la identificación de enfermedades en las hojas de cultivos de maíz a través de la cámara de tu celular.</string>
    <string name="btnIniciarPros">Iniciar proceso</string>
    <string name="btnCaptImg">Capturar Ahora</string>
    <string name="btnCargImg">Subir de Galería</string>
    <string name="btnSalir">Salir</string>
    <string name="titulo_enfer_iden">Enfermedad identificada</string>
    <string name="titulo_info_adic">Información adicional</string>
    <string name="btnDetectarEnfer">Detectar enfermedad</string>
    <string name="textoVerMas"><u>Más Información</u></string>
    <string name="textoInfo">Seleccione imagen para obtener información...</string>

    <string name="InfoEjemplo">La enfermedad está presente en ambientes cálidos y húmedos de todo el mundo, con una fase de enfermedad foliar y una fase de pudrición del tallo. No se informa que la fase de infección foliar del hongo tenga importancia económica en el maíz. El daño más severo es causado por la fase de pudrición del tallo. El daño foliar se puede observar en diferentes etapas del desarrollo de la planta. En la etapa inicial de plántula, las hojas muestran lesiones irregulares, de ovales a alargadas, con márgenes característicos de amarillo a marrón rojizo. En etapas posteriores del desarrollo de la planta, se pueden observar lesiones similares en las hojas superiores de las plantas infectadas, especialmente en aquellas donde ya se han desarrollado síntomas de pudrición del tallo.</string>
</resources>