<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/mrgApp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_corn_foreground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrgTopTitle"
        android:textSize="@dimen/textTitle"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/titulo_info_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrgTopDescr"
        android:textSize="@dimen/textDescr"
        android:text="@string/descripcion_info_app"/>

    <Button
        android:id="@+id/btnIniciarPros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrgApp"
        android:text="@string/btnIniciarPros"
        android:textAllCaps="false"
        android:background="@drawable/shape_btn_primary"/>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrgApp"
        android:text="@string/btnSalir"
        android:textAllCaps="false"
        android:background="@drawable/shape_btn_secundary"
        app:backgroundTint="@null"/>
</LinearLayout>