<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CornDiseaseActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/mrgApp">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/svInfo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/clBotones"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDeCamara"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/btnSecundary" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrgApp1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/titulo_enfer_iden"
                android:textSize="@dimen/textTitle" />

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEnfermedad_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Roya común"/>

                <TextView
                    android:id="@+id/txtProbabilidad_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEnfermedad_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tizón de la hoja del norte"/>

                <TextView
                    android:id="@+id/txtProbabilidad_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEnfermedad_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Mancha gris de la hoja"/>

                <TextView
                    android:id="@+id/txtProbabilidad_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEnfermedad_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Hoja sana"/>

                <TextView
                    android:id="@+id/txtProbabilidad_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEnfermedad_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Otro cultivo"/>

                <TextView
                    android:id="@+id/txtProbabilidad_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrgApp1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/titulo_info_adic"
                android:textSize="@dimen/textTitle" />

            <TextView
                android:id="@+id/txtInfoAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoInfo" />

            <TextView
                android:id="@+id/txtMasInformacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoVerMas"
                android:textColor="#2232D1" />
        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrgApp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnCapturarImg"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/shape_btn_primary"
            android:text="@string/btnCaptImg"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/btnCargarImg"
            app:layout_constraintEnd_toStartOf="@+id/btnCargarImg"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCargarImg"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/shape_btn_secundary"
            app:backgroundTint="@null"
            android:text="@string/btnCargImg"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCapturarImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCapturarImg"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>